divided base CSS to partials

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,4 +17,13 @@
 */
 
 @import "partials/1_mixins";
-
+@import "partials/2_variables";
+@import "partials/3_normalize";
+@import "partials/4_general";
+@import "partials/5_columns";
+@import "partials/6_header";
+@import "partials/7_footer";
+@import "partials/8_main";
+@import "partials/9_sidebar";
+@import "partials/10_comments";
+@import "partials/11_media-queries";
