--- a/sass/partials/_10_comments.scss
+++ b/sass/partials/_10_comments.scss
@@ -4,7 +4,7 @@
 .comment-respond,
 .entry-comments,
 .entry-pings {
-	background-color: #fff;
+	background-color: $white;
 	font-size: 16px;
 	font-size: 1.6rem;
 	margin-bottom: 40px;
