--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -14,8 +14,8 @@ body > div {
 }
 
 body {
-	background-color: #eee;
-	color: #333;
+	background-color: $white;
+	color: $base-dark;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 20px;
 	font-size: 2rem;
@@ -42,13 +42,13 @@ textarea:focus,
 }
 
 a {
-	color: #c3251d;
+	color: $primary-color;
 	text-decoration: underline;
 }
 
 a:hover,
 a:focus {
-	color: #333;
+	color: $base-dark;
 	text-decoration: none;
 }
 
@@ -70,7 +70,7 @@ li {
 hr {
 	border: 0;
 	border-collapse: collapse;
-	border-top: 1px solid #eee;
+	border-top: 1px solid $fourth-light;
 	clear: both;
 	margin: 1em 0;
 }
@@ -229,14 +229,14 @@ figure {
 }
 
 .gallery img {
-	border: 1px solid #eee;
+	border: 1px solid $fourth-light;
 	height: auto;
 	padding: 4px;
 }
 
 .gallery img:hover,
 .gallery img:focus {
-	border: 1px solid #999;
+	border: 1px solid $third-light;
 }
 
 /* ## Forms
@@ -245,9 +245,9 @@ figure {
 input,
 select,
 textarea {
-	background-color: #fff;
-	border: 1px solid #ddd;
-	color: #333;
+	background-color: $fourth-light;
+	border: 1px solid $third-light;
+	color: $base-dark;
 	font-size: 18px;
 	font-size: 1.8rem;
 	font-weight: 400;
@@ -257,7 +257,7 @@ textarea {
 
 input:focus,
 textarea:focus {
-	border: 1px solid #999;
+	border: 1px solid $third-light;
 	outline: none;
 }
 
@@ -268,12 +268,12 @@ input[type="radio"] {
 }
 
 ::-moz-placeholder {
-	color: #333;
+	color: $base-dark;
 	opacity: 1;
 }
 
 ::-webkit-input-placeholder {
-	color: #333;
+	color: $base-dark;
 }
 
 button,
@@ -281,9 +281,9 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"],
 .button {
-	background-color: #333;
+	background-color: $base-dark;
 	border: 0;
-	color: #fff;
+	color: $fourth-light;
 	cursor: pointer;
 	font-size: 16px;
 	font-size: 1.6rem;
@@ -304,13 +304,13 @@ input:focus[type="button"],
 input:focus[type="reset"],
 input:focus[type="submit"],
 .button:focus  {
-	background-color: #c3251d;
-	color: #fff;
+	background-color: $primary-color;
+	color: $fourth-light;
 }
 
 .entry-content .button:hover,
 .entry-content .button:focus {
-	color: #fff;
+	color: $fourth-light;
 }
 
 .button {
@@ -335,9 +335,9 @@ input[type="submit"].small {
 .site-container input[type="reset"]:disabled:hover,
 .site-container input[type="submit"]:disabled,
 .site-container input[type="submit"]:disabled:hover {
-	background-color: #eee;
+	background-color: $white;
 	border-width: 0;
-	color: #777;
+	color: $fourth-dark;
 	cursor: not-allowed;
 }
 
@@ -359,7 +359,7 @@ table {
 }
 
 tbody {
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid $fourth-light;
 }
 
 td,
@@ -368,7 +368,7 @@ th {
 }
 
 td {
-	border-top: 1px solid #eee;
+	border-top: 1px solid $fourth-light;
 	padding: 6px;
 }
 
@@ -411,7 +411,7 @@ th:first-child {
 	background: #fff;
 	z-index: 100000; /* Above WP toolbar. */
 	text-decoration: none;
-	box-shadow: 0 0 2px 2px rgba(0,0,0,.6);
+	box-shadow: 0 0 2px 2px $fourth-dark;
 }
 
 .more-link {
