--- a/sass/partials/_6_header.scss
+++ b/sass/partials/_6_header.scss
@@ -2,7 +2,7 @@
 ---------------------------------------------------------------------------------------------------- */
 
 .site-header {
-	background-color: #fff;
+	background-color: $third-light;
 }
 
 .site-header > .wrap {
@@ -39,7 +39,7 @@
 .site-title a,
 .site-title a:hover,
 .site-title a:focus {
-	color: #333;
+	color: $base-dark;
 	text-decoration: none;
 }
 
@@ -99,7 +99,7 @@
 }
 
 .genesis-nav-menu a {
-	color: #333;
+	color: $base-dark;
 	text-decoration: none;
 	display: block;
 	padding: 32px 20px;
@@ -110,12 +110,12 @@
 .genesis-nav-menu .current-menu-item > a,
 .genesis-nav-menu .sub-menu .current-menu-item > a:hover,
 .genesis-nav-menu .sub-menu .current-menu-item > a:focus  {
-	color: #c3251d;
+	color: $primary-color;
 	text-decoration: underline;
 }
 
 .genesis-nav-menu .sub-menu {
-	border-top: 1px solid #eee;
+	border-top: 1px solid $base-light;
 	left: -9999px;
 	opacity: 0;
 	position: absolute;
@@ -129,8 +129,8 @@
 }
 
 .genesis-nav-menu .sub-menu a {
-	background-color: #fff;
-	border: 1px solid #eee;
+	background-color: $white;
+	border: 1px solid $third-light;
 	border-top: 0;
 	font-size: 14px;
 	font-size: 1.4rem;
@@ -195,8 +195,8 @@
 --------------------------------------------- */
 
 .nav-primary {
-	background-color: #fff;
-	border-top: 1px solid #eee;
+	background-color: $white;
+	border-top: 1px solid $fourth-dark;
 }
 
 /* ## Footer Navigation
