--- a/sass/partials/_7_footer.scss
+++ b/sass/partials/_7_footer.scss
@@ -2,7 +2,7 @@
 ---------------------------------------------------------------------------------------------------- */
 
 .footer-widgets {
-	background-color: #fff;
+	background-color: $white;
 	font-size: 18px;
 	font-size: 1.8rem;
 	clear: both;
@@ -33,8 +33,9 @@
 ---------------------------------------------------------------------------------------------------- */
 
 .site-footer {
-	background-color: #fff;
-	border-top: 1px solid #eee;
+	background-color: $base-dark;
+	border-top: 1px solid $primary-dark;
+	color: $base-light;
 	font-size: 16px;
 	font-size: 1.6rem;
 	line-height: 1;
