--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -5,7 +5,7 @@
 --------------------------------------------- */
 
 .entry {
-	background-color: #fff;
+	background-color: $white;
 	margin-bottom: 40px;
 	padding: 70px 80px;
 }
@@ -30,8 +30,8 @@
 }
 
 .entry-content code {
-	background-color: #333;
-	color: #eee;
+	background-color: $base-dark;
+	color: $white;
 }
 
 /* ## Entry Meta
@@ -48,7 +48,7 @@ p.entry-meta {
 }
 
 .entry-footer .entry-meta {
-	border-top: 1px solid #eee;
+	border-top: 1px solid $white;
 	padding-top: 24px;
 }
 
@@ -79,8 +79,8 @@ p.entry-meta {
 }
 
 .archive-pagination a {
-	background-color: #fff;
-	color: #333;
+	background-color: $white;
+	color: $base-dark;
 	cursor: pointer;
 	display: inline-block;
 	font-size: 16px;
@@ -93,6 +93,6 @@ p.entry-meta {
 .archive-pagination a:hover,
 .archive-pagination a:focus,
 .archive-pagination .active a {
-	background-color: #c3251d;
-	color: #fff;
+	background-color: $primary-color;
+	color: $white;
 }
