--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1124,7 +1124,7 @@ img.alignright,
 }
 
 .site-header > .wrap {
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 /* ## Title Area
@@ -1132,7 +1132,7 @@ img.alignright,
 .title-area {
   float: left;
   padding: 10px 0;
-  width: 300px;
+  width: 80px;
 }
 
 .header-image .title-area {
@@ -1152,7 +1152,6 @@ img.alignright,
   font-weight: 700;
   line-height: 1.2;
 }
-
 .site-title a,
 .site-title a:hover,
 .site-title a:focus {
@@ -1203,20 +1202,27 @@ img.alignright,
   font-weight: 600;
   line-height: 1;
   width: 100%;
+  text-transform: uppercase;
+  margin: 12px 0;
 }
-
 .genesis-nav-menu .menu-item {
   display: inline-block;
   margin-bottom: 0;
   padding-bottom: 0;
   text-align: left;
 }
-
-.genesis-nav-menu a {
+.genesis-nav-menu .menu-item a {
   color: #3E3E3E;
   text-decoration: none;
   display: block;
-  padding: 32px 20px;
+  padding: 20px 20px;
+}
+.genesis-nav-menu > .menu-item:last-of-type {
+  background-color: #E4003F;
+  border-radius: 5px;
+}
+.genesis-nav-menu > .menu-item:last-of-type > a {
+  color: #FFF;
 }
 
 .genesis-nav-menu a:hover,
@@ -1225,7 +1231,7 @@ img.alignright,
 .genesis-nav-menu .sub-menu .current-menu-item > a:hover,
 .genesis-nav-menu .sub-menu .current-menu-item > a:focus {
   color: #E4003F;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .genesis-nav-menu .sub-menu {
@@ -1323,11 +1329,21 @@ img.alignright,
 /* # Footer Widgets
 ---------------------------------------------------------------------------------------------------- */
 .footer-widgets {
-  background-color: #FFF;
+  background-color: #3E3E3E;
+  color: #EBEBEB;
   font-size: 18px;
   font-size: 1.8rem;
   clear: both;
-  padding: 60px 0;
+  padding: 30px 0;
+  font-size: 80%;
+}
+.footer-widgets .widget-title {
+  color: #E4003F;
+  text-transform: uppercase;
+}
+.footer-widgets a {
+  color: #EBEBEB;
+  text-decoration: none;
 }
 
 .footer-widgets-1,
@@ -1358,7 +1374,7 @@ img.alignright,
   font-size: 16px;
   font-size: 1.6rem;
   line-height: 1;
-  padding: 60px 0;
+  padding: 0 0 20px 0;
   text-align: center;
 }
 
