--- a/sass/partials/_6_header.scss
+++ b/sass/partials/_6_header.scss
@@ -6,22 +6,26 @@
 }
 
 .site-header > .wrap {
-	padding: 20px 0;
+	padding: 10px 0;
 }
 
 /* ## Title Area
 --------------------------------------------- */
 
+// in case no image
 .title-area {
 	float: left;
 	padding: 10px 0;
-	width: 300px;
+	width: 80px;
 }
 
-.header-image .title-area {
-	margin: 0 auto;
-	max-width: 300px;
-	padding: 0;
+// when image
+.header-image {
+	.title-area {
+		margin: 0 auto;
+		max-width: 300px;
+		padding: 0;
+	}
 }
 
 .header-full-width .title-area {
@@ -34,13 +38,13 @@
 	font-size: 3rem;
 	font-weight: 700;
 	line-height: 1.2;
-}
 
-.site-title a,
-.site-title a:hover,
-.site-title a:focus {
-	color: $base-dark;
-	text-decoration: none;
+	a,
+	a:hover,
+	a:focus {
+		color: $base-dark;
+		text-decoration: none;
+	}
 }
 
 .header-image .site-title > a {
@@ -89,20 +93,32 @@
 	font-weight: 600;
 	line-height: 1;
 	width: 100%;
-}
+	text-transform: uppercase;
+	margin: 12px 0;
 
-.genesis-nav-menu .menu-item {
-	display: inline-block;
-	margin-bottom: 0;
-	padding-bottom: 0;
-	text-align: left;
-}
+	.menu-item {
+		display: inline-block;
+		margin-bottom: 0;
+		padding-bottom: 0;
+		text-align: left;
 
-.genesis-nav-menu a {
-	color: $base-dark;
-	text-decoration: none;
-	display: block;
-	padding: 32px 20px;
+		a {
+			color: $base-dark;
+			text-decoration: none;
+			display: block;
+			padding: 20px 20px;
+		}
+	}
+
+	> .menu-item {
+		&:last-of-type {
+			background-color: $primary-color;
+			border-radius: 5px;
+			> a {
+				color: $white;
+			}
+		}
+	}
 }
 
 .genesis-nav-menu a:hover,
@@ -111,7 +127,7 @@
 .genesis-nav-menu .sub-menu .current-menu-item > a:hover,
 .genesis-nav-menu .sub-menu .current-menu-item > a:focus  {
 	color: $primary-color;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 .genesis-nav-menu .sub-menu {
