--- a/sass/partials/_7_footer.scss
+++ b/sass/partials/_7_footer.scss
@@ -2,11 +2,23 @@
 ---------------------------------------------------------------------------------------------------- */
 
 .footer-widgets {
-	background-color: $white;
+	background-color: $base-dark;
+	color: $base-light;
 	font-size: 18px;
 	font-size: 1.8rem;
 	clear: both;
-	padding: 60px 0;
+	padding: 30px 0;
+	font-size: 80%;
+
+	.widget-title {
+		color: $primary-color;
+		text-transform: uppercase;
+	}
+
+	a {
+		color: $base-light;
+		text-decoration: none;
+	}
 }
 
 .footer-widgets-1,
@@ -39,7 +51,7 @@
 	font-size: 16px;
 	font-size: 1.6rem;
 	line-height: 1;
-	padding: 60px 0;
+	padding: 0 0 20px 0;
 	text-align: center;
 }
 
