--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1335,11 +1335,12 @@ img.alignright,
   font-size: 1.8rem;
   clear: both;
   padding: 30px 0;
-  font-size: 80%;
+  font-size: 66%;
 }
 .footer-widgets .widget-title {
   color: #E4003F;
   text-transform: uppercase;
+  margin-bottom: 4px;
 }
 .footer-widgets a {
   color: #EBEBEB;
@@ -1376,6 +1377,7 @@ img.alignright,
   line-height: 1;
   padding: 0 0 20px 0;
   text-align: center;
+  font-size: 66%;
 }
 
 .site-footer p {
