--- a/sass/partials/_7_footer.scss
+++ b/sass/partials/_7_footer.scss
@@ -8,11 +8,12 @@
 	font-size: 1.8rem;
 	clear: both;
 	padding: 30px 0;
-	font-size: 80%;
+	font-size: 66%;
 
 	.widget-title {
 		color: $primary-color;
 		text-transform: uppercase;
+		margin-bottom: 4px;
 	}
 
 	a {
@@ -53,6 +54,7 @@
 	line-height: 1;
 	padding: 0 0 20px 0;
 	text-align: center;
+	font-size: 66%;
 }
 
 .site-footer p {
