--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -386,6 +386,15 @@ h1 {
 h2 {
   font-size: 30px;
   font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 300;
+}
+h2:after {
+  content: "";
+  display: block;
+  width: 100px;
+  margin: 15px auto 15px;
+  border-top: 1px solid #E4003F;
 }
 
 h3 {
@@ -1120,7 +1129,10 @@ img.alignright,
 /* # Site Header
 ---------------------------------------------------------------------------------------------------- */
 .site-header {
-  background-color: rgba(235, 235, 235, 0.38);
+  background-color: rgba(255, 255, 255, 0.92);
+  position: fixed;
+  z-index: 5;
+  width: 100%;
 }
 
 .site-header > .wrap {
@@ -1386,6 +1398,56 @@ img.alignright,
 
 /* # Content Area
 ---------------------------------------------------------------------------------------------------- */
+.site-inner.full {
+  max-width: none;
+  padding: 0;
+}
+
+/* ## Hero Sections
+--------------------------------------------- */
+.hero-section {
+  position: relative;
+  padding: 25vh 0;
+  text-align: center;
+}
+.hero-section .wp-custom-header {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: 0 auto;
+  z-index: 0;
+}
+.hero-section .wp-custom-header img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.hero-section .wrap {
+  position: relative;
+}
+.hero-section .wrap h1 {
+  color: white;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+}
+
+/* ## Sections : Text Blocks
+--------------------------------------------- */
+.text-block {
+  padding: 40px 0;
+  text-align: center;
+}
+.text-block p {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
 /* ## Entries
 --------------------------------------------- */
 .entry {
