--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -65,6 +65,35 @@
 	}
 }
 
+/* ## Sections : 3 Blurbs
+--------------------------------------------- */
+
+.three-blurbs {
+	padding: 40px 0;
+
+	.blurb {
+		border: 1px solid $fourth-dark;
+		border-radius: 4px;
+		text-align: center;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: center;
+		}
+
+		p {
+			padding: 0 10px;
+		}
+	}
+}
+
+.tile-shadow {
+    position: relative;
+	box-shadow: 0 2rem 5rem -2.5rem rgba(0,0,0,0.10), 0rem 0.3rem 0.5rem -0.4rem rgba(0,0,0,0.2);
+}	
+
 /* ## Entries
 --------------------------------------------- */
 
