--- a/style-human.css
+++ b/style-human.css
@@ -1449,6 +1449,34 @@ img.alignright,
   margin: 0 auto;
 }
 
+/* ## Sections : 3 Blurbs
+--------------------------------------------- */
+.three-blurbs {
+  padding: 40px 0;
+}
+.three-blurbs .blurb {
+  border: 1px solid rgba(62, 62, 62, 0.12);
+  border-radius: 4px;
+  text-align: center;
+}
+.three-blurbs .blurb img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+.three-blurbs .blurb p {
+  padding: 0 10px;
+}
+
+.tile-shadow {
+  position: relative;
+  -webkit-box-shadow: 0 2rem 5rem -2.5rem rgba(0, 0, 0, 0.1), 0rem 0.3rem 0.5rem -0.4rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2rem 5rem -2.5rem rgba(0, 0, 0, 0.1), 0rem 0.3rem 0.5rem -0.4rem rgba(0, 0, 0, 0.2);
+}
+
 /* ## Entries
 --------------------------------------------- */
 .entry {
