--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -94,6 +94,24 @@
 	box-shadow: 0 2rem 5rem -2.5rem rgba(0,0,0,0.10), 0rem 0.3rem 0.5rem -0.4rem rgba(0,0,0,0.2);
 }	
 
+/* ## Sections : Post Selection
+--------------------------------------------- */
+
+.post-selection {
+	padding: 40px 0;
+	
+	.post {
+		text-align: center;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: center;
+		}
+	}
+}
+
 /* ## Entries
 --------------------------------------------- */
 
