--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -121,6 +121,7 @@ h6 {
 h1 {
 	font-size: 36px;
 	font-size: 3.6rem;
+	text-shadow: 1px 1px 2px $secondary-dark;
 }
 
 h2 {
@@ -749,4 +750,3 @@ img.alignright,
 	color: #333;
 	outline: #ccc solid 1px;
 }
-
