--- a/style-human.css
+++ b/style-human.css
@@ -15,6 +15,7 @@
 	License: GPL-2.0+
 	License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
+/* # Gradient */
 /* ## Baseline Normalize
 --------------------------------------------- */
 /* normalize.css v4.1.1 | MIT License | http://necolas.github.io/normalize.css/ */
@@ -382,6 +383,7 @@ h6 {
 h1 {
   font-size: 36px;
   font-size: 3.6rem;
+  text-shadow: 1px 1px 2px rgba(62, 62, 62, 0.54);
 }
 
 h2 {
@@ -1133,7 +1135,7 @@ img.alignright,
 .site-header {
   background-color: rgba(255, 255, 255, 0.92);
   position: fixed;
-  z-index: 5;
+  z-index: 10;
   width: 100%;
 }
 
@@ -1406,7 +1408,11 @@ img.alignright,
 --------------------------------------------- */
 .hero-section {
   position: relative;
-  padding: 25vh 0;
+  padding: 20% 0 15%;
+  background-position: center;
+  background-size: cover;
+  -webkit-transition: all .1s ease;
+  transition: all .1s ease;
   text-align: center;
 }
 .hero-section .wp-custom-header {
@@ -1416,6 +1422,13 @@ img.alignright,
   top: 0;
   bottom: 0;
   margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  overflow: hidden;
   z-index: 0;
 }
 .hero-section .wp-custom-header img {
@@ -1434,8 +1447,22 @@ img.alignright,
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.7);
+  position: relative;
+}
+.overlay * {
+  position: relative;
   z-index: 1;
+}
+.overlay:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.33);
 }
 
 /* ## Sections : Text Blocks
