--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -750,3 +750,26 @@ img.alignright,
 	color: #333;
 	outline: #ccc solid 1px;
 }
+
+/* # CTAs
+--------------------------------------------- */
+
+.cta-btn {
+	background-color: $primary-color;
+	border-radius: 5px;
+	color: $white;
+	padding: 10px 20px 12px;
+	text-decoration: none;
+	transition: all 1s ease;
+	margin: 10px 0 0;
+	display: inline-block;
+	text-transform: uppercase;
+	font-size: 16px;
+	font-size: 1.6rem;
+	font-weight: 600;
+
+	&:hover {
+		color: $white;
+		background-color: darken($primary-color, 10%);
+	}
+}
