--- a/sass/partials/_1_mixins.scss
+++ b/sass/partials/_1_mixins.scss
@@ -1,3 +1,13 @@
+/* # Mixins
+-----------------------------------------------------------------------*/
+
+/* # Typography */
+
+@mixin font-size($sizeValue: 2.0) {
+    font-size: ($sizeValue * 10) + px;
+    font-size: $sizeValue + rem;
+    // if rem is supported, it will override px
+  }
 
 
 /* # Gradient */
