--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -16,9 +16,8 @@ body > div {
 body {
 	background-color: $white;
 	color: $base-dark;
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 20px;
-	font-size: 2rem;
+	font-family: $font-body;
+	@include font-size($font-size-s);
 	-webkit-font-smoothing: antialiased;
 	font-weight: 400;
 	line-height: 1.625;
@@ -94,8 +93,7 @@ blockquote {
 blockquote::before {
 	content: "\201C";
 	display: block;
-	font-size: 30px;
-	font-size: 3rem;
+	@include font-size($font-size-l);
 	height: 0;
 	left: -20px;
 	position: relative;
@@ -112,21 +110,19 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 600;
-	line-height: 1.2;
+	font-family: $font-heading;
+	font-weight: $font-weight-bold;
+	line-height: $line-height-heading;
 	margin: 0 0 10px;
 }
 
 h1 {
-	font-size: 36px;
-	font-size: 3.6rem;
+	@include font-size($font-size-xl);
 	text-shadow: 1px 1px 2px $secondary-dark;
 }
 
 h2 {
-	font-size: 30px;
-	font-size: 3rem;
+	@include font-size($font-size-l);
 	text-transform: uppercase;
 	font-weight: 300;
 
@@ -140,23 +136,19 @@ h2 {
 }
 
 h3 {
-	font-size: 24px;
-	font-size: 2.4rem;
+	@include font-size($font-size-m);
 }
 
 h4 {
-	font-size: 20px;
-	font-size: 2rem;
+	@include font-size($font-size-m);
 }
 
 h5 {
-	font-size: 18px;
-	font-size: 1.8rem;
+	@include font-size($font-size-m);
 }
 
 h6 {
-	font-size: 16px;
-	font-size: 1.6rem;
+	@include font-size($font-size-m);
 }
 
 /* ## Objects
@@ -259,9 +251,8 @@ textarea {
 	background-color: $fourth-light;
 	border: 1px solid $third-light;
 	color: $base-dark;
-	font-size: 18px;
-	font-size: 1.8rem;
-	font-weight: 400;
+	@include font-size($font-size-s);
+	font-weight: $font-weight-normal;
 	padding: 16px;
 	width: 100%;
 }
@@ -298,7 +289,7 @@ input[type="submit"],
 	cursor: pointer;
 	font-size: 16px;
 	font-size: 1.6rem;
-	font-weight: 700;
+	font-weight: $font-weight-superbold;
 	padding: 16px 24px;
 	text-decoration: none;
 	white-space: normal;
@@ -384,7 +375,7 @@ td {
 }
 
 th {
-	font-weight: 400;
+	font-weight: $font-weight-normal;
 	padding: 0 6px;
 }
 
@@ -599,7 +590,7 @@ img.alignright,
 .wp-caption-text {
 	font-size: 14px;
 	font-size: 1.4rem;
-	font-weight: 600;
+	font-weight: $font-weight-bold;
 	margin: 0;
 	text-align: center;
 }
@@ -766,7 +757,7 @@ img.alignright,
 	text-transform: uppercase;
 	font-size: 16px;
 	font-size: 1.6rem;
-	font-weight: 600;
+	font-weight: $font-weight-bold;
 
 	&:hover {
 		color: $white;
