--- a/style-human.css
+++ b/style-human.css
@@ -15,7 +15,15 @@
 	License: GPL-2.0+
 	License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
+/* # Mixins
+-----------------------------------------------------------------------*/
+/* # Typography */
 /* # Gradient */
+/* # Variables
+-----------------------------------------------------------------------*/
+/* ### Colors */
+/* ### Typography */
+/* ### Misc */
 /* ## Baseline Normalize
 --------------------------------------------- */
 /* normalize.css v4.1.1 | MIT License | http://necolas.github.io/normalize.css/ */
@@ -283,9 +291,9 @@ body > div {
 body {
   background-color: #FFF;
   color: #3E3E3E;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
-  font-size: 2rem;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 16px;
+  font-size: 1.6rem;
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   line-height: 1.625;
@@ -374,9 +382,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-weight: 600;
-  line-height: 1.2;
+  line-height: 1.3;
   margin: 0 0 10px;
 }
 
@@ -401,23 +409,23 @@ h2:after {
 }
 
 h3 {
-  font-size: 24px;
-  font-size: 2.4rem;
+  font-size: 22px;
+  font-size: 2.2rem;
 }
 
 h4 {
-  font-size: 20px;
-  font-size: 2rem;
+  font-size: 22px;
+  font-size: 2.2rem;
 }
 
 h5 {
-  font-size: 18px;
-  font-size: 1.8rem;
+  font-size: 22px;
+  font-size: 2.2rem;
 }
 
 h6 {
-  font-size: 16px;
-  font-size: 1.6rem;
+  font-size: 22px;
+  font-size: 2.2rem;
 }
 
 /* ## Objects
@@ -517,8 +525,8 @@ textarea {
   background-color: rgba(235, 235, 235, 0.12);
   border: 1px solid rgba(235, 235, 235, 0.38);
   color: #3E3E3E;
-  font-size: 18px;
-  font-size: 1.8rem;
+  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 400;
   padding: 16px;
   width: 100%;
@@ -1505,7 +1513,7 @@ img.alignright,
 }
 .three-blurbs .blurb {
   border: 1px solid rgba(62, 62, 62, 0.12);
-  border-radius: 4px;
+  border-radius: 5px;
   text-align: center;
 }
 .three-blurbs .blurb img {
