unified style for .button and removed .cta

--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -156,7 +156,7 @@
 	text-align: center;
 
 	.kpi-count {
-		border-radius: 5px;
+		border-radius: $site-radius;
 		padding: 10px 20px;
 		margin: 10px auto;
 		display: inline-block;
