--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -10,7 +10,7 @@ html {
 
 /* Chrome fix */
 body > div {
-	font-size: 2rem;
+	@include font-size($font-size-s);
 }
 
 body {
@@ -283,12 +283,14 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"],
 .button {
-	background-color: $base-dark;
+	background-color: $primary-color;
 	border: 0;
-	color: $fourth-light;
+	border-radius: $site-radius;
+	color: $white;
+	text-transform: uppercase;
 	cursor: pointer;
-	font-size: 16px;
-	font-size: 1.6rem;
+	transition: all .6s ease;
+	@include font-size($font-size-s);
 	font-weight: $font-weight-superbold;
 	padding: 16px 24px;
 	text-decoration: none;
@@ -306,8 +308,8 @@ input:focus[type="button"],
 input:focus[type="reset"],
 input:focus[type="submit"],
 .button:focus  {
-	background-color: $primary-color;
-	color: $fourth-light;
+	background-color: darken($primary-color, 10%);
+	color: $white;
 }
 
 .entry-content .button:hover,
@@ -740,27 +742,4 @@ img.alignright,
 :focus {
 	color: #333;
 	outline: #ccc solid 1px;
-}
-
-/* # CTAs
---------------------------------------------- */
-
-.cta-btn {
-	background-color: $primary-color;
-	border-radius: 5px;
-	color: $white;
-	padding: 10px 20px 12px;
-	text-decoration: none;
-	transition: all 1s ease;
-	margin: 10px 0 0;
-	display: inline-block;
-	text-transform: uppercase;
-	font-size: 16px;
-	font-size: 1.6rem;
-	font-weight: $font-weight-bold;
-
-	&:hover {
-		color: $white;
-		background-color: darken($primary-color, 10%);
-	}
 }
