--- a/style-human.css
+++ b/style-human.css
@@ -285,7 +285,8 @@ html {
 
 /* Chrome fix */
 body > div {
-  font-size: 2rem;
+  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 body {
@@ -558,10 +559,14 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"],
 .button {
-  background-color: #3E3E3E;
+  background-color: #E4003F;
   border: 0;
-  color: rgba(235, 235, 235, 0.12);
+  border-radius: 5px;
+  color: #FFF;
+  text-transform: uppercase;
   cursor: pointer;
+  -webkit-transition: all .6s ease;
+  transition: all .6s ease;
   font-size: 16px;
   font-size: 1.6rem;
   font-weight: 700;
@@ -581,8 +586,8 @@ input:focus[type="button"],
 input:focus[type="reset"],
 input:focus[type="submit"],
 .button:focus {
-  background-color: #E4003F;
-  color: rgba(235, 235, 235, 0.12);
+  background-color: #b10031;
+  color: #FFF;
 }
 
 .entry-content .button:hover,
@@ -1000,28 +1005,6 @@ img.alignright,
 :focus {
   color: #333;
   outline: #ccc solid 1px;
-}
-
-/* # CTAs
---------------------------------------------- */
-.cta-btn {
-  background-color: #E4003F;
-  border-radius: 5px;
-  color: #FFF;
-  padding: 10px 20px 12px;
-  text-decoration: none;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
-  margin: 10px 0 0;
-  display: inline-block;
-  text-transform: uppercase;
-  font-size: 16px;
-  font-size: 1.6rem;
-  font-weight: 600;
-}
-.cta-btn:hover {
-  color: #FFF;
-  background-color: #b10031;
 }
 
 /* # Structure and Layout
