--- a/sass/partials/_2_variables.scss
+++ b/sass/partials/_2_variables.scss
@@ -12,6 +12,7 @@ $primary-dark: rgba( $base-dark, .87 );
 $secondary-dark: rgba( $base-dark, .54 );
 $third-dark: rgba( $base-dark, .38 );
 $fourth-dark: rgba( $base-dark, .12 );
+$fifth-dark: rgba( $base-dark, .02 );
 
 $base-light: #EBEBEB;
 $primary-light: rgba( $base-light, .87 );
