--- a/sass/partials/_4_general.scss
+++ b/sass/partials/_4_general.scss
@@ -118,6 +118,7 @@ h6 {
 
 h1 {
 	@include font-size($font-size-xl);
+	font-weight: $font-weight-normal;
 	text-shadow: 1px 1px 2px $secondary-dark;
 }
 
