--- a/sass/partials/_7_footer.scss
+++ b/sass/partials/_7_footer.scss
@@ -4,11 +4,9 @@
 .footer-widgets {
 	background-color: $base-dark;
 	color: $base-light;
-	font-size: 18px;
-	font-size: 1.8rem;
+	@include font-size($font-size-xs);
 	clear: both;
 	padding: 30px 0;
-	font-size: 66%;
 
 	.widget-title {
 		color: $primary-color;
@@ -49,12 +47,10 @@
 	background-color: $base-dark;
 	border-top: 1px solid $primary-dark;
 	color: $base-light;
-	font-size: 16px;
-	font-size: 1.6rem;
+	@include font-size($font-size-xs);
 	line-height: 1;
 	padding: 0 0 20px 0;
 	text-align: center;
-	font-size: 66%;
 }
 
 .site-footer p {
