added background image to KPI and CTA banner and basic styling, waiting for parallax

--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1667,7 +1667,7 @@ img.alignright,
   top: 10px;
 }
 
-/* ## Sections : Video CTA Banner
+/* ## Sections : Banners
 --------------------------------------------- */
 .video-cta-banner {
   padding: 40px 0;
@@ -1678,11 +1678,12 @@ img.alignright,
   margin: 10px 0 20px;
 }
 
-/* ## Sections : Banners
---------------------------------------------- */
 .kpi-banner {
   padding: 40px 0;
   text-align: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 0%;
 }
 .kpi-banner .kpi-count {
   border-radius: 5px;
@@ -1703,6 +1704,9 @@ img.alignright,
 .main-cta-banner {
   padding: 40px 0;
   text-align: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 100%;
 }
 
 /* ## Entries
