added round corners to image in cards

--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1503,6 +1503,8 @@ img.alignright,
   height: 100%;
   object-fit: cover;
   object-position: center;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 .three-blurbs .blurb p {
   padding: 0 10px 13px;
@@ -1583,6 +1585,8 @@ img.alignright,
 .timeline-item img {
   float: left;
   margin-right: 20px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 .timeline-item .item-content {
   float: left;
@@ -1622,6 +1626,7 @@ img.alignright,
   color: #FFF;
   padding: 10px;
   font-weight: 700;
+  border-top-left-radius: 5px;
 }
 .timeline-item p {
   margin: 0 0 10px;
