--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -11,7 +11,7 @@
 --------------------------------------------- */
 .hero-section {
 	position: relative;
-	padding: 22% 0 12%;
+	padding: 20% 0 10%;
 	background-position: center;
 	background-size: cover;
 	transition: all .1s ease;
@@ -45,7 +45,7 @@
 		h1 {
 			color: white;
 			max-width: 700px;
-			margin: 0 auto;
+			margin: 0 auto 20px;
 		}
 	}
 }
