had fun with improved design for quotes

--- a/sass/partials/_8_main.scss
+++ b/sass/partials/_8_main.scss
@@ -80,6 +80,22 @@
 		p {
 			text-align: justify;
 			margin: -9px 0 5px;
+			position: relative;
+			font-family: Georgia, serif;
+
+			&:before {
+				display: block;
+				padding-left: 10px;
+				content: "\201C";
+				font-size: 100px;
+				position: absolute;
+				left: 99px;
+				top: -49px;
+				color: $secondary-color;
+			}
+		}
+
+		span {
 			font-style: italic;
 		}
 	}
